--- a/carros.html
+++ b/carros.html
@@ -24,24 +24,34 @@
 <section class="car-list">
     <h2>Viaturas Disponíveis</h2>
     <div class="features-grid">
+        
         <div class="car-card">
-            <img src="imgs/carro1.jpg" alt="BMW M3">
-            <h3>BMW M3</h3>
-            <p>2019 • 45.000 km</p>
-            <p class="price">49.500 €</p>
+            <a href="bmw.html" style="text-decoration: none; color: inherit;">
+                <img src="imgs/carro1.jpg" alt="BMW M3">
+                <h3>BMW M3</h3>
+                <p>2019 • 45.000 km</p>
+                <p class="price">49.500 €</p>
+            </a>
         </div>
+
         <div class="car-card">
-            <img src="imgs/carro2.jpg" alt="Mercedes C220">
-            <h3>Mercedes C220</h3>
-            <p>2018 • 62.000 km</p>
-            <p class="price">28.900 €</p>
+            <a href="mercedes.html" style="text-decoration: none; color: inherit;">
+                <img src="imgs/carro2.jpg" alt="Mercedes C220">
+                <h3>Mercedes C220</h3>
+                <p>2018 • 62.000 km</p>
+                <p class="price">28.900 €</p>
+            </a>
         </div>
+
         <div class="car-card">
-            <img src="imgs/carro3.jpg" alt="Audi A5">
-            <h3>Audi A5</h3>
-            <p>2020 • 38.000 km</p>
-            <p class="price">41.200 €</p>
+            <a href="audi.html" style="text-decoration: none; color: inherit;">
+                <img src="imgs/carro3.jpg" alt="Audi A5">
+                <h3>Audi A5</h3>
+                <p>2020 • 38.000 km</p>
+                <p class="price">41.200 €</p>
+            </a>
         </div>
+
     </div>
 </section>
 
